--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "SMSRecovery-AngularApp": {
+    "my-crud-app2": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/SMSRecovery-AngularApp",
+            "outputPath": "dist/my-crud-app2",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "SMSRecovery-AngularApp:build:production"
+              "browserTarget": "my-crud-app2:build:production"
             },
             "development": {
-              "browserTarget": "SMSRecovery-AngularApp:build:development"
+              "browserTarget": "my-crud-app2:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "SMSRecovery-AngularApp:build"
+            "browserTarget": "my-crud-app2:build"
           }
         },
         "test": {
@@ -94,8 +94,5 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": "3d76c525-6e8c-4dc4-98c0-49360ca409c3"
   }
 }
